# fw-decoder

./: .dockerignore  .env  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  HTTPS_SETUP.md  README.md  azure_blob_downloader.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  index.html  nginx.conf  requirements_azure.txt  run_azure_download.sh  setup_azure_downloader.sh  start-nginx.sh  supervisord.conf
backend/: Cargo.toml
backend/src/: config.rs  handlers.rs  main.rs  types.rs
backend/src/parser/: dict_parser.rs  log_decoder.rs  mod.rs  syslog_parser.rs
backend/src/services/: decoder_service.rs  file_service.rs
backend_services/: Cargo.toml
backend_services/src/: config.rs  handlers.rs  main.rs  types.rs
backend_services/src/parser/: log_decoder_new.rs  mod.rs  session_parser.rs
backend_services/src/services/: decoder_service.rs  file_service.rs  mod.rs
log_decoder/: Cargo.toml  build.rs
log_decoder/src/: dict_log_parser.rs  lib.rs  main.rs  syslog_parser.rs
src/: api.rs  app.rs  lib.rs  parser.rs  types.rs
src/components/: enhanced_session_view.rs  mod.rs  session_view.rs
syslog_decoder/: Cargo.toml  README.md
syslog_decoder/src/: lib.rs
