[package]
name = "fw_log_decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "console"] }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
