[package]
name = "fw_log_decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Document", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "console"] }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
