[package]
name = "fw_log_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tracing = "0.1"
# Integrated log decoder dependencies
anyhow = "1.0.75"
regex = "1.9.5"
rayon = "1.5"
