[package]
name = "decoder"
version = "0.1.0"
edition = "2021"
authors = ["Ashutosh Mishra <ashutosh.mishra@araymond.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive", "string"] }
colored = "2.0.4"
nom = "7.1.3"
regex = "1.9.5"
rayon = "1.5"                                                 # Add rayon for parallel processing
git-version = "0.3.9"

[build-dependencies]
# All features enabled
vergen = { version = "9.0.0", features = ["build", "cargo", "rustc", "si"] }

vergen-git2 = { version = "1.0.0", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }
